@@ -97,3 +97,6 @@ v2.0 7/7/2014
 
  v2.0.1 7/7/2014
  - Bugfix: services not showing up on Linux
+
+ v? ?/?/????
+ - Some layout/css fixes
